--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ body {
   padding: 0;
 }
 */
+body {
+  background-color: #333; /* Màu tối (dễ đọc) */
+  color: #ffffff;
+  font-family: 'Courier New', monospace;
+  margin: 0;
+  padding: 0; /*
+  text-align: center; */
+}
 /* Header tổng thể */
 .header {
   display: flex;
@@ -26,14 +34,7 @@ body {
   border-bottom: 2px solid #00ffff;
   flex-wrap: wrap;
 }
-body {
-  background-color: #333; /* Màu tối (dễ đọc) */
-  color: #ffffff;
-  font-family: 'Courier New', monospace;
-  margin: 0;
-  padding: 0; /*
-  text-align: center; */
-}
+
 /* Logo */
 .logo {
   display: flex;
@@ -158,7 +159,7 @@ img {
   height: auto;       /* Giữ tỷ lệ ảnh */
   margin: 10px;       /* Khoảng cách giữa các ảnh */
   border-radius: 8px; /* Bo góc mềm mại */
-  box-shadow: 0 0 8px rgba(0, 255, 255, 0.5); /* Tạo viền sáng nhẹ */
+  /*box-shadow: 0 0 8px rgba(0, 255, 255, 0.5); /* Tạo viền sáng nhẹ */
   display: inline-block;
 }
 
@@ -170,8 +171,8 @@ img {
 }
 
 .title img {
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 27px;
     border-radius: 4px;
     box-shadow: 0 0 8px rgba(0, 255, 255, 0.5);
 }
@@ -198,3 +199,8 @@ font-size: 24px;
   padding: 0;
   text-align: left;
 } */
+a{
+    background-color: #ffffff;
+    width: 20px;
+    height: 20px;
+}
