--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ font-size: 24px;
   padding: 0;
   text-align: left;
 } */
-a{
+#game a{
     background-color: #ffffff;
     width: 20px;
     height: 20px;
